css/worklist.css
/*  
    Copyright (c) 2009-2010, LoveMachine Inc.
    All Rights Reserved. 
    http://www.lovemachineinc.com
*/
* :focus { outline: 0; }
.popup-body, #confirmation{
    display: none;
}

.popup-body, .user-info
{
    padding: 0 8px;
    text-align: left;
}

.popup-body input[type="text"], .popup-body textarea,
.popup-body select,
.user-info input[type="text"], .user-info textarea,
.user-info select
{
    font-size: 14px;
    font-family: helvetica, arial, sans-serif;
    width: 370px;
}

#popup-edit textarea{
    height: 110px;
}

.popup-body input.date, .user-info input.date {
    width: 130px;
}
.popup-body input.money, .user-info input.money {
    width: 50px;
}

.popup-body p, .user-info p
{
    margin: 0 0 2px;
}

.popup-body .popup-delete-summary {
    padding: 4px;
}

.table-userlist tr:hover{
    cursor: pointer;
}
.table-userlist thead tr:hover{
    cursor: default;
}

.rowown {
    background: #FFCC99;
}
.workitem-selected {
    background: #FFD;
}

.info-label{
    font-weight: bold;
}
.info-label span{
font-weight:normal;
}
#bid-signup{
text-align: center;
}
#bid-signup a{
color:#98AAB2;
}
.left-col{
float: left;
margin-left: 60px;
}
.right-col{
float: right;
margin-right: 60px;
}
#popup-bid{
z-index: 1;
}
#ui-datepicker-div, #ui-timepicker-div
{
    z-index: 1100; 
}

.input_box {
    background:transparent url(../images/input_bg.gif) no-repeat scroll 0 0;
    border:0 none;
    float:right;
    margin:0;
    padding:2px;
    width:163px;
    margin:17px 0 0;
}
.input_box input {
    border:0 none;
    color:#2C3549;
    float:left;
    font-size:13px;
    margin:0;
    padding:2px;
    width:130px;
}
.input_box form {
    display:inline;
    margin:0;
    padding:0;
}
.input_box input[type="text"]:active, .input_box input[type="text"]:hover, .input_box input[type="text"]:focus {
    border:medium none;
}


/* Status Update Fields */
#status-wrap {
    position:absolute;
    width: 50%;
    line-height: 30px;
    z-index:1;
}

#status-update {
    width: 40%;
}
    
#sharethis_0    {
    position:absolute;
    margin-top: 3px;
    margin-left: 20px;
}

#account-info, #personal-info, #payment-info {
    border: 1px solid black;
    border-radius: 6px;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    padding: 8px;
    margin-bottom: 6px;
}

#account-info {
    background: #FFF url(../images/lm_gradient1.jpg) no-repeat top center;
    margin-left: 16px;
    margin-top: 24px;
}
#account-info table {
    border: none;
}
#account-info tr:hover {
    background: inherit;
}
#account-info td {
    border: none;
    padding: 0px;
}   

#personal-info {
    background: #FFF url(../images/lm_gradient2.jpg) no-repeat top center;
    margin-left: 64px;
}

#payment-info {
    background: #FFF url(../images/lm_gradient3.jpg) no-repeat top center;
    margin-left: 112px;
}

#account-info h2, #personal-info h2, #payment-info h2 {
    color: #000;
    margin-top: 8px;
}

/* Paypal Reports */
#pp-filter-box {
    float:right;
    border-radius: 6px;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border: 2px #DCD998 solid;
    background-color:#FFD;
    padding:8px 8px 19px 8px;
    height:95px;
    margin-bottom: 20px;
}

#pp-filter-rrbox {
    float:right;
    text-align:right;
    margin-top:20px;
}

#pp-filter-rbox {
	float:right;
	text-align:right;
	margin-top:20px;
	margin-right:8px;
}

#pp-filter-lbox {
	float:right;
	text-align:right;
	margin-right:8px;
}

#job_id {
    width:69px;
}
#wFees {
	display: none;
}
.feesum {
  cursor: pointer;
}
#feesToolTip {
  display: none;
}

